--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 
 spring.h2.console.enable=true
-#spring.datasource.url=jdbc:h2:mem:testdb
+
+#mustache?? ??? ??? ?? ?? ?? ??
+server.servlet.encoding.force-response=true
